--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
@@ -8,8 +8,7 @@
         <div data-role="content editPageContent">
             <div class="editPageSidebar">
                 <div class="libraryTree">
-                    <ul>
-                    </ul>
+                    <ul></ul>
                 </div>
             </div>
 
@@ -82,6 +81,7 @@
                                 <option value="Box">${OptionBox}</option>
                                 <option value="BoxRear">${OptionBoxRear}</option>
                                 <option value="Disc">${OptionDisc}</option>
+                                <option value="Icon">${OptionIcon}</option>
                                 <option value="Logo">${OptionLogo}</option>
                                 <option value="Menu">${OptionMenu}</option>
                                 <option value="Screenshot">${OptionScreenshot}</option>
@@ -125,6 +125,7 @@
                             <option value="Box">${OptionBox}</option>
                             <option value="BoxRear">${OptionBoxRear}</option>
                             <option value="Disc">${OptionDisc}</option>
+                            <option value="Icon">${OptionIcon}</option>
                             <option value="Logo">${OptionLogo}</option>
                             <option value="Menu">${OptionMenu}</option>
                             <option value="Screenshot">${OptionScreenshot}</option>
