made dlna cast & crew optional

--- a/MediaBrowser.WebDashboard/dashboard-ui/dlnaserversettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dlnaserversettings.html
@@ -38,6 +38,11 @@
                             <select id="selectUser" data-mini="true"></select>
                             <div class="fieldDescription">${LabelDefaultUserHelp}</div>
                         </li>
+                        <li>
+                            <label for="chkEnableEnhancedMovies">${LabelEnableEnhancedMovies}</label>
+                            <input type="checkbox" id="chkEnableEnhancedMovies" data-mini="true" />
+                            <div class="fieldDescription">${LabelEnableEnhancedMoviesHelp}</div>
+                        </li>
                     </ul>
                     <ul data-role="listview" class="ulForm">
                         <li>
