--- a/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
@@ -11,7 +11,7 @@
 
                 <div class="readOnlyContent">
                     <p>${HeaderNotificationList}</p>
-                    <p>${SendNotificationHelp}</p>
+                    <p>${HeaderSendNotificationHelp}</p>
 
                     <div class="notificationList" style="margin-top: 2em;">
                     </div>
