--- a/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
@@ -9,7 +9,7 @@
             <div class="content-primary">
 
                 <div class="readOnlyContent">
-                    <p>${HeaderSendNotificationHelp}</p>
+                    <p>${ScheduledTasksHelp}</p>
                     <div id="divScheduledTasks"></div>
                 </div>
             </div>
