aadd sync services tab

--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -11,6 +11,7 @@
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="#" data-role="button" class="ui-btn-active">${TabActivity}</a>
+                    <a href="syncservices.html" data-role="button">${TabServices}</a>
                     <a href="syncsettings.html" data-role="button">${TabSettings}</a>
                 </div>
 
