--- a/MediaBrowser.WebDashboard/dashboard-ui/plugins.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/plugins.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${PluginsTitle}</title>
+    <title>${TitlePlugins}</title>
 </head>
 <body>
     <div id="pluginsPage" data-role="page" class="page type-interior pluginConfigurationPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Plugins">
