display sync services

--- a/MediaBrowser.WebDashboard/dashboard-ui/syncservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncservices.html
@@ -16,8 +16,7 @@
                 </div>
 
                 <div class="detailSectionHeader">${HeaderInstalledServices}</div>
-                <p style="display:none;" class="noServicesInstalled">${MessageNoServicesInstalled}</p>
-                <div class="installed"></div>
+                <div class="installedPlugins"></div>
                 <br />
                 <br />
                 <br />
