--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -15,7 +15,7 @@
                 </div>
                 <div data-role="controlgroup" data-type="horizontal" class="localnav syncTabs" data-mini="true" style="display:none;">
                     <a href="syncactivity.html" data-role="button">${TabActivity}</a>
-                    <a href="#" data-role="button" class="ui-btn-active">${TabServices}</a>
+                    <a href="syncservices.html" data-role="button" class="ui-btn-active">${TabServices}</a>
                     <a href="syncsettings.html" data-role="button">${TabSettings}</a>
                 </div>
 
