remove more reliance on ActiveService

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
@@ -18,10 +18,8 @@
 
                     <div class="liveTvStatusContent" style="display: none;">
 
-                        <div style="margin-top: 2.5em;">
-                            <p>${LabelService} <span id="activeServiceName"></span></p>
-                            <p>${LabelStatus} <span id="activeServiceStatus"></span></p>
-                            <p>${LabelVersion} <span id="activeServiceVersion"></span></p>
+                        <h2>${HeaderServices}</h2>
+                        <div class="servicesList">
                         </div>
                         <br />
 
