--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -9,7 +9,7 @@
         <div data-role="content">
             <div class="content-primary">
                 <br />
-                <div class="detailSectionHeader" style="padding: 0 1em;">
+                <div class="detailSectionHeader">
                     <h3 style="margin:.6em 0;">
                         <span style="vertical-align:middle;">${HeaderUsers}</span>
                         <a data-role="button" data-icon="plus" href="usernew.html" data-inline="true" data-mini="true" data-iconpos="notext" style="margin: 0 .5em; vertical-align:middle;">
@@ -19,7 +19,7 @@
                 </div>
                 <div class="localUsers" style="text-align:left;margin-top:.5em;"></div>
 
-                <div class="detailSectionHeader" style="padding: 0 1em;margin-top:2.5em;">
+                <div class="detailSectionHeader" style="margin-top:2.5em;">
                     <h3 style="margin:.6em 0;">
                         <span style="vertical-align:middle;">${HeaderGuests}</span>
                         <a class="btnInvite" data-role="button" data-icon="plus" href="#" data-rel="popup" data-position-to="window" data-inline="true" data-mini="true" data-iconpos="notext" style="margin: 0 0 0 .5em; vertical-align:middle;">
