add AlbumArtists to item dto's

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -73,8 +73,9 @@
                                 <input type="text" id="txtArtist" placeholder="${LabelArtistsHelp}" />
                             </div>
                             <div data-role="fieldcontain" id="fldAlbumArtist" style="display: none;">
-                                <label for="txtAlbumArtist">${LabelAlbumArtist}</label>
+                                <label for="txtAlbumArtist">${LabelAlbumArtists}</label>
                                 <input type="text" id="txtAlbumArtist" />
+                                <input type="text" id="txtArtist" placeholder="${LabelArtistsHelp}" />
                             </div>
                             <div data-role="fieldcontain" id="fldAlbum" style="display: none;">
                                 <label for="txtAlbum">${LabelAlbum}</label>
