add ArtistItems to api output

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -74,8 +74,7 @@
                             </div>
                             <div data-role="fieldcontain" id="fldAlbumArtist" style="display: none;">
                                 <label for="txtAlbumArtist">${LabelAlbumArtists}</label>
-                                <input type="text" id="txtAlbumArtist" />
-                                <input type="text" id="txtArtist" placeholder="${LabelArtistsHelp}" />
+                                <input type="text" id="txtAlbumArtist" placeholder="${LabelArtistsHelp}" />
                             </div>
                             <div data-role="fieldcontain" id="fldAlbum" style="display: none;">
                                 <label for="txtAlbum">${LabelAlbum}</label>
