add movie metadata support to live tv

--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -33,11 +33,11 @@
                             <fieldset data-role="controlgroup">
                                 <legend>${LabelSelectInternetTrailersForCinemaMode}</legend>
                                 <label for="chkUpcomingTheaterTrailers">${OptionUpcomingMoviesInTheaters}</label>
-                                <input type="checkbox" id="chkUpcomingTheaterTrailers" data-mini="true" />
+                                <input type="checkbox" id="chkUpcomingTheaterTrailers" />
                                 <label for="chkUpcomingDvdTrailers">${OptionUpcomingDvdMovies}</label>
-                                <input type="checkbox" id="chkUpcomingDvdTrailers" data-mini="true" />
+                                <input type="checkbox" id="chkUpcomingDvdTrailers" />
                                 <label for="chkUpcomingStreamingTrailers">${OptionUpcomingStreamingMovies}</label>
-                                <input type="checkbox" id="chkUpcomingStreamingTrailers" data-mini="true" />
+                                <input type="checkbox" id="chkUpcomingStreamingTrailers" />
                             </fieldset>
                             <div class="fieldDescription">${LabelTheseFeaturesRequireSupporterHelpAndTrailers}</div>
                             <div class="fieldDescription"><a href="supporter.html">${ButtonLearnMore}</a></div>
