--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -32,6 +32,14 @@
                             <div class="fieldDescription">${LabelNumberOfGuideDaysHelp}</div>
                         </li>
                     </ul>
+                    <div>
+                        <fieldset data-role="controlgroup">
+                            <legend>${LabelEnableInternetMetadataForTvPrograms}</legend>
+                            <label for="chkMovies">${OptionTVMovies}</label>
+                            <input type="checkbox" id="chkMovies" />
+                        </fieldset>
+                    </div>
+                    <br />
                     <br />
                     <ul data-role="listview" class="ulForm">
                         <li>
