added live tv items page

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -21,8 +21,16 @@
                     <br />
                 </div>
                 <div id="upcomingPrograms">
-                    <h1 class="listHeader">${HeaderUpcomingTV}</h1>
+                    <h1 class="listHeader">${HeaderUpcomingPrograms}</h1>
                     <div class="upcomingProgramItems itemsContainer"></div>
+                    <br />
+                </div>
+                <div id="upcomingTvMovies">
+                    <h1 class="listHeader">${HeaderUpcomingMovies}</h1>
+                    <div class="upcomingTvMovieItems itemsContainer"></div>
+                    <div>
+                        <a data-role="button" href="livetvitems.html?type=movies" data-inline="true" data-mini="true">${ButtonMoreItems}</a>
+                    </div>
                     <br />
                 </div>
             </div>
