add setting to hide library tile names

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -85,6 +85,12 @@
                             <option value="none">${OptionNone}</option>
                         </select>
                     </div>
+                    <br />
+                    <div>
+                        <label for="chkEnableLibraryTileNames">${LabelShowLibraryTileNames}</label>
+                        <input type="checkbox" id="chkEnableLibraryTileNames" data-mini="true">
+                        <div class="fieldDescription">${LabelShowLibraryTileNamesHelp}</div>
+                    </div>
                 </div>
             </div>
 
