update dynamic images

--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -22,7 +22,7 @@
                 <div class="listTopPaging">
                 </div>
             </div>
-            <div id="items" class="itemsContainer paddedItemsContainer"></div>
+            <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
         </div>
 
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
@@ -43,7 +43,7 @@
                             <option value="List">${OptionList}</option>
                             <option value="Poster">${OptionPoster}</option>
                             <option value="PosterCard">${OptionPosterCard}</option>
-                           <option value="Thumb">${OptionThumb}</option>
+                            <option value="Thumb">${OptionThumb}</option>
                             <option value="ThumbCard">${OptionThumbCard}</option>
                         </select>
                     </div>
