--- a/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
@@ -86,6 +86,19 @@
                             </form>
                         </div>
                     </div>
+
+                    <br />
+                    <h1>${HeaderSupporterBenefits}</h1>
+                    <p class="linkSupporterKeyMessage"></p>
+                    <a href="https://play.google.com/store/apps/details?id=tv.mediabrowser.mediabrowsertv" target="_blank" title="Android TV">
+                        <img src="css/images/clients/androidtv-tile.png" style="height:60px;" />
+                    </a>
+                    <br />
+                    <br />
+                    <div class="supporters">
+
+                    </div>
+                    <button type="button" id="btnAddConnectUser" data-icon="plus">Add User</button>
                 </div>
             </div>
         </div>
