--- a/MediaBrowser.WebDashboard/dashboard-ui/syncservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncservices.html
@@ -23,6 +23,19 @@
                 <div class="detailSectionHeader">${HeaderAvailableServices}</div>
                 <div class="catalog"></div>
 
+                <div class="supporterPromotion syncPromotion" style="display:none;">
+                    <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
+                        <div>
+                            ${HeaderSyncRequiresSupporterMembership}
+                        </div>
+                        <div>
+                            ${HeaderEnjoyDayTrial}
+                        </div>
+                        <div style="font-weight:normal;font-size:90%;margin-top:5px;">
+                            ${ButtonLearnMore}
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
