--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -18,6 +18,12 @@
                     </h3>
                 </div>
                 <div class="localUsers" style="text-align:left;margin-top:.5em;"></div>
+                <!--<div style="position:relative;margin-top:1em;">
+                    <a href="http://mediabrowser.tv/connect" target="_blank">
+                        <div class="playedIndicator" style="left:5px;right:inherit;top:0;"><div class="ui-icon-cloud ui-btn-icon-notext"></div></div>
+                    </a>
+                    <span style="padding-left:33px;vertical-align:middle;">${LinkedToMediaBrowserConnect}</span>
+                </div>-->
 
                 <div class="detailSectionHeader" style="margin-top:2.5em;">
                     <h3 style="margin:.6em 0;">
