support adding connect user

--- a/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
@@ -98,15 +98,44 @@
                     <div class="supporters">
 
                     </div>
-                    <button type="button" id="btnAddConnectUser" data-icon="plus">Add User</button>
+                    <button type="button" id="btnAddConnectUser" data-icon="plus">${ButtonAddUser}</button>
                 </div>
             </div>
+        </div>
+        <div data-role="popup" class="popupAddUser popup" data-theme="a">
+
+            <div class="ui-bar-a" style="text-align: center; padding: 0 20px; position: relative;">
+
+                <h3 class="identificationHeader">${HeaderAddUser}</h3>
+            </div>
+
+            <div data-role="content">
+
+                <form class="popupAddUserForm" style="max-width:350px;padding-top:.5em;">
+                    <div>
+                        <label for="selectUserToAdd">${LabelUser}</label>
+                        <select id="selectUserToAdd" required="required"></select>
+                        <div class="fieldDescription">${LabelAddConnectSupporterHelp}</div>
+                    </div>
+                    <br />
+                    <p>
+                        <button type="submit" data-theme="b" data-icon="check">
+                            ${ButtonSubmit}
+                        </button>
+                        <button type="button" data-icon="delete" onclick="$(this).parents('.popup').popup('close');">
+                            ${ButtonCancel}
+                        </button>
+                    </p>
+                </form>
+            </div>
+
         </div>
 
         <script type="text/javascript">
             $('#supporterKeyForm').on('submit', SupporterKeyPage.updateSupporterKey);
             $('#lostKeyForm').on('submit', SupporterKeyPage.retrieveSupporterKey);
             $('#linkKeysForm').on('submit', SupporterKeyPage.linkSupporterKeys);
+            $('.popupAddUserForm').on('submit', SupporterKeyPage.onAddConnectUserSubmit).on('submit', SupporterKeyPage.onAddConnectUserSubmit);
         </script>
     </div>
 </body>
