--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -4,7 +4,7 @@
     <title>${TitleMediaBrowser}</title>
 </head>
 <body>
-    <div id="nowPlayingPage" data-role="page" class="page libraryPage nowPlayingPage" data-contextname="${TitleRemoteControl}">
+    <div id="nowPlayingPage" data-role="page" class="page libraryPage nowPlayingPage" data-contextname="${TitleRemoteControl}" data-theme="b">
 
         <div class="libraryViewNav">
             <a href="#" class="ui-btn-active tabButton" data-tab="tabNowPlaying">${TabNowPlaying}</a>
@@ -135,7 +135,7 @@
         <div data-role="popup" id="popupSubtitleTrackMenu" data-transition="flip">
             <div class="trackList"></div>
         </div>
-        
+
         <div class="chapterMenuOverlay" style="display: none;"></div>
         <div class="chapterMenu" style="display: none;">
             <div class="chapterMenuInner">
@@ -146,6 +146,7 @@
             $('.sendMessageForm').off('submit', NowPlayingPage.onMessageSubmit).on('submit', NowPlayingPage.onMessageSubmit);
             $('.typeTextForm').off('submit', NowPlayingPage.onSendStringSubmit).on('submit', NowPlayingPage.onSendStringSubmit);
         </script>
+
     </div>
 </body>
 </html>
