combine playlist with remote control

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -10,6 +10,7 @@
             <a href="#" class="ui-btn-active tabButton" data-tab="tabNowPlaying">${TabNowPlaying}</a>
             <a href="#" class="tabButton" data-tab="tabNavigation">${TabControls}</a>
             <a href="#" class="tabButton" data-tab="tabAdvanced">${TabAdvanced}</a>
+            <a href="#" class="tabButton tabButtonPlaylist" data-tab="tabPlaylist">${TabPlaylist}</a>
         </div>
 
         <div data-role="content" style="padding: 1em 0;">
@@ -121,6 +122,15 @@
                                 </form>
 
                             </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="tabPlaylist tabContent" style="display: none;">
+
+                    <div class="readOnlyContent" style="margin: 0 auto; padding: 0 1em;">
+
+                        <div class="playlist detailTableContainer">
                         </div>
                     </div>
 
