--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -134,8 +134,8 @@
                     <div class="dashboardFooter">
                         <div style="height:1px;" class="ui-bar-inherit"></div>
                         <div style="margin-top:1em;">
-                            <a href="http://mediabrowser.tv" target="_blank">Media Browser</a>
-                            <a href="http://mediabrowser.tv/community" target="_blank">${LinkCommunity}</a>
+                            <a href="http://emby.media" target="_blank">Emby</a>
+                            <a href="http://emby.media/community" target="_blank">${LinkCommunity}</a>
                             <a href="https://github.com/MediaBrowser" target="_blank">${LinkGithub}</a>
                             <a class="swaggerLink" target="_blank" href="#">${LinkApi}</a>
                         </div>
