--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -46,7 +46,7 @@
                             <label for="chkMyMovieTrailers">${OptionTrailersFromMyMovies}</label>
                             <input type="checkbox" id="chkMyMovieTrailers" data-mini="true" />
                             <div class="fieldDescription">${OptionTrailersFromMyMoviesHelp}</div>
-                            <div class="fieldDescription"><a href="http://mediabrowser.tv/community/index.php?/topic/674-media-files-folders-structure/" target="_blank">${ButtonLearnMore}</a></div>
+                            <div class="fieldDescription"><a href="http://emby.media/community/index.php?/topic/674-media-files-folders-structure/" target="_blank">${ButtonLearnMore}</a></div>
                         </li>
                         <li>
                             <label for="txtCustomIntrosPath">${LabelCustomIntrosPath}</label>
