--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -28,12 +28,12 @@
                     ${ButtonSignIn}
                 </button>
                 <p>
-                    <a href="http://mediabrowser.tv/community/index.php?app=core&module=global&section=lostpass" target="_blank">${ButtonForgotPassword}</a>
+                    <a href="http://emby.media/community/index.php?app=core&module=global&section=lostpass" target="_blank">${ButtonForgotPassword}</a>
                 </p>
 
                 <br />
                 <h2 style="text-align: left;">${HeaderNewUsers}</h2>
-                <a data-role="button" data-icon="action" href="http://mediabrowser.tv/community/index.php?app=core&module=global&section=register" target="_blank">${ButtonSignUp}</a>
+                <a data-role="button" data-icon="action" href="http://emby.media/community/index.php?app=core&module=global&section=register" target="_blank">${ButtonSignUp}</a>
             </form>
         </div>
 
