--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -49,7 +49,7 @@
                                         <button id="btnUpdateApplication" type="button" data-icon="arrow-d" data-theme="b" onclick="DashboardPage.updateApplication();">${ButtonUpdateNow}</button>
                                     </div>
                                     <div id="btnManualUpdateContainer">
-                                        <a href="http://mediabrowser.tv/download" target="_blank">${PleaseUpdateManually}</a>
+                                        <a href="http://emby.media/download" target="_blank">${PleaseUpdateManually}</a>
                                     </div>
                                 </div>
                                 <p id="ports"></p>
