--- a/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="favoritesPage" data-role="page" class="page type-home libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book">
