--- a/MediaBrowser.WebDashboard/dashboard-ui/plugincatalog.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/plugincatalog.html
@@ -21,9 +21,9 @@
                             <input type="radio" name="radioPackageTypes" class="radioPackageTypes" id="radioServer" value="Server" data-mini="true">
                             <label for="radioServer">${TabServer}</label>
                             <input type="radio" name="radioPackageTypes" class="radioPackageTypes" id="radioClassic" value="MBClassic" data-mini="true">
-                            <label for="radioClassic">${PluginTabMediaBrowserClassic}</label>
+                            <label for="radioClassic">${PluginTabAppClassic}</label>
                             <input type="radio" name="radioPackageTypes" class="radioPackageTypes" id="radopTheater" value="MBTheater" data-mini="true">
-                            <label for="radopTheater">${PluginTabMediaBrowserTheater}</label>
+                            <label for="radopTheater">${PluginTabAppTheater}</label>
                         </fieldset>
                     </div>
                     <div style="display:inline-block;vertical-align:bottom;">
