--- a/MediaBrowser.WebDashboard/dashboard-ui/support.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/support.html
@@ -16,16 +16,16 @@
                         <a href="supporterkey.html" data-role="button">${TabSupporterKey}</a>
                         <a href="about.html" data-role="button">${TabAbout}</a>
                     </div>
-                    <p>${MediaBrowserHasCommunity}</p>
-                    <a data-role="button" data-icon="arrow-r" data-iconpos="right" href="http://mediabrowser.tv/community" target="_blank">${VisitTheCommunity}</a>
+                    <p>${ProjectHasCommunity}</p>
+                    <a data-role="button" data-icon="arrow-r" data-iconpos="right" href="http://emby.media/community" target="_blank">${VisitTheCommunity}</a>
                     <br />
                     <p>
                         ${CheckoutKnowledgeBase}
                     </p>
-                    <a data-role="button" data-icon="search" data-iconpos="right" href="http://mediabrowser.tv/community/index.php?/forum/23-knowledge-base/" target="_blank">${SearchKnowledgeBase}</a>
+                    <a data-role="button" data-icon="search" data-iconpos="right" href="http://emby.media/community/index.php?/forum/23-knowledge-base/" target="_blank">${SearchKnowledgeBase}</a>
                     <br />
-                    <p>${VisitMediaBrowserWebsiteLong}</p>
-                    <a data-role="button" data-icon="home" data-iconpos="right" href="http://mediabrowser.tv" target="_blank">${VisitMediaBrowserWebsite}</a>
+                    <p>${VisitProjectWebsiteLong}</p>
+                    <a data-role="button" data-icon="home" data-iconpos="right" href="http://emby.media" target="_blank">${VisitProjectWebsite}</a>
                 </div>
             </div>
         </div>
