--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -42,7 +42,7 @@
                             <input id="txtConnectUserName" type="text" />
                             <div class="fieldDescription">
                                 <div>${LabelConnectUserNameHelp}</div>
-                                <div style="margin-top: .75em;"><a href="http://mediabrowser.tv/connect" target="_blank">${ButtonLearnMoreAboutMediaBrowserConnect}</a></div>
+                                <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
                             </div>
                             <br />
                         </li>
