--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -19,10 +19,10 @@
                 </div>
                 <div class="localUsers" style="text-align:left;margin-top:.5em;"></div>
                 <!--<div style="position:relative;margin-top:1em;">
-                    <a href="http://mediabrowser.tv/connect" target="_blank">
+                    <a href="http://emby.media/connect" target="_blank">
                         <div class="playedIndicator" style="left:5px;right:inherit;top:0;"><div class="ui-icon-cloud ui-btn-icon-notext"></div></div>
                     </a>
-                    <span style="padding-left:33px;vertical-align:middle;">${LinkedToMediaBrowserConnect}</span>
+                    <span style="padding-left:33px;vertical-align:middle;">${LinkedToEmbyConnect}</span>
                 </div>-->
 
                 <div class="detailSectionHeader" style="margin-top:2.5em;">
@@ -58,7 +58,7 @@
                             <input type="text" id="txtConnectUsername" value="" placeholder="Username" required="required">
                             <div class="fieldDescription">
                                 <div>${LabelConnectGuestUserNameHelp}</div>
-                                <div style="margin-top: .75em;"><a href="http://mediabrowser.tv/connect" target="_blank">${ButtonLearnMoreAboutMediaBrowserConnect}</a></div>
+                                <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
                             </div>
 
                             <br />
