--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardagreement.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="wizardAgreementPage" data-role="page" class="page standalonePage wizardPage">
@@ -20,8 +20,8 @@
                     <br style="clear:both;" />
                     <p>${MessagePleaseAcceptTermsOfService}</p>
 
-                    <p><a href="http://mediabrowser.tv/privacy" target="_blank">${ButtonPrivacyPolicy}</a></p>
-                    <p><a href="http://mediabrowser.tv/terms" target="_blank">${ButtonTermsOfService}</a></p>
+                    <p><a href="http://emby.media/privacy" target="_blank">${ButtonPrivacyPolicy}</a></p>
+                    <p><a href="http://emby.media/terms" target="_blank">${ButtonTermsOfService}</a></p>
                     <ul data-role="listview" class="ulForm">
                         <li>
                             <label for="chkAccept">${OptionIAcceptTermsOfService}</label>
