--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="wizardFinishPage" data-role="page" class="page standalonePage wizardPage">
@@ -28,9 +28,9 @@
                         <img src="css/images/clients/windowsphone.png" title="Windows Phone" /></a>
                     <a href="http://apps.microsoft.com/windows/en-us/app/media-browser/ad55a2f0-9897-47bd-8944-bed3aefd5d06" target="_blank">
                         <img src="css/images/clients/windowsrt.png" title="Windows 8.1" /></a>
-                    <a href="http://mediabrowser.tv" target="_blank" title="Windows Media Center">
+                    <a href="http://emby.media" target="_blank" title="Windows Media Center">
                         <img src="css/images/clients/mbc.png" /></a>
-                    <a href="http://mediabrowser.tv/download" target="_blank" title="Kodi">
+                    <a href="http://emby.media/download" target="_blank" title="Kodi">
                         <img src="css/images/clients/kodi.png" />
                     </a>
                     <a href="http://forum.team-mediaportal.com/threads/plugin-mediabrowser-for-mediaportal-v0-13-beta-2013-10-21.119513" target="_blank" title="Media Portal">
