--- a/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizarduser.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="wizardUserPage" data-role="page" class="page standalonePage wizardPage">
@@ -22,7 +22,7 @@
                             <div class="fieldDescription">${MoreUsersCanBeAddedLater}</div>
                         </li>
                     </ul>
-                    <h2>${HeaderOptionalLinkMediaBrowserAccount}</h2>
+                    <h2>${HeaderOptionalLinkEmbyAccount}</h2>
                     <br/>
                     <ul data-role="listview" class="ulForm">
                         <li>
@@ -30,7 +30,7 @@
                             <input id="txtConnectUserName" type="text" />
                             <div class="fieldDescription">
                                 <div>${LabelConnectUserNameHelp}</div>
-                                <div style="margin-top: .75em;"><a href="http://mediabrowser.tv/connect" target="_blank">${ButtonLearnMoreAboutMediaBrowserConnect}</a></div>
+                                <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
                             </div>
                         </li>
                     </ul>
