--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
@@ -28,7 +28,7 @@
                             <div class="fieldDescription">
                                 <div>${LabelPreferredDisplayLanguageHelp}</div>
                                 <div style="margin-top: .25em;">
-                                    <a href="http://mediabrowser.tv/community/index.php?/topic/5727-join-our-translation-team/" target="_blank">${LabelReadHowYouCanContribute}</a>
+                                    <a href="http://emby.media/community/index.php?/topic/5727-join-our-translation-team/" target="_blank">${LabelReadHowYouCanContribute}</a>
                                 </div>
                             </div>
                         </li>
