--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemimages.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="editItemImagesPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}">
