--- a/MediaBrowser.WebDashboard/dashboard-ui/games.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="gamesPage" data-role="page" class="page libraryPage listPage">
