--- a/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="gamesystemsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="gamesystem">
