--- a/MediaBrowser.WebDashboard/dashboard-ui/kids.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/kids.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div class="backdropContainer kidsBackdropContainer" style="top:0;"></div>
