--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvchannels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvchannels.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="liveTvChannelsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
