--- a/MediaBrowser.WebDashboard/dashboard-ui/movieslatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movieslatest.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="moviesLatestPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="movie">
