--- a/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userpassword.html
@@ -19,7 +19,7 @@
 
                     <div class="connectMessage readOnlyContent" style="display:none;">
                         <p>${MessageProfileInfoSynced}</p>
-                        <div style="margin-top: .75em;"><a href="http://mediabrowser.tv/connect" target="_blank">${ButtonLearnMoreAboutMediaBrowserConnect}</a></div>
+                        <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
                     </div>
 
                     <form class="adminUpdatePasswordForm passwordSection" style="display:none;margin: 0 auto 2em;">
