--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>${TitleMediaBrowser}</title>
+    <title>Emby</title>
 </head>
 <body>
     <div id="wizardStartPage" data-role="page" class="page standalonePage wizardPage">
@@ -13,7 +13,7 @@
 
                     <div>
                         <h2 style="float:left;">
-                            <img src="css/images/mblogoicon.png" />${WelcomeToMediaBrowser}
+                            <img src="css/images/mblogoicon.png" />${WelcomeToProject}
                         </h2>
                         <a class="accentButton accentButton-g" href="https://github.com/MediaBrowser/Wiki/wiki/Quick%20start" target="_blank" style="float:right;margin-top:20px;"><i class="fa fa-info"></i>${ButtonQuickStartGuide}</a>
                     </div>
