--- a/MediaBrowser.WebDashboard/dashboard-ui/about.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/about.html
@@ -17,7 +17,7 @@
                         <a href="about.html" data-role="button" class="ui-btn-active">${TabAbout}</a>
                     </div>
                     <div style="font-size:24px;">
-                        <img class="imgLogoIcon" src="css/images/mblogoicon.png" /><span class="logoLibraryMenuButtonText">MEDIA</span>
+                        <img class="imgLogoIcon" src="css/images/mblogoicon.png" /><span class="logoLibraryMenuButtonText">EMBY</span>
                     </div>
                     <br />
                     <br />
